[package]
name = "led-hourglass"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false, features = ["binstart", "std", "alloc", "native", "experimental"] }
esp-idf-hal = "0.43.0"
esp-idf-sys = "0.34.0"
edge-executor = "0.4.1"
async-channel = "2.2.0"
futures-timer = "3.0.2"
futures = "0.3.30"
lazy_static = "1.4.0"

[build-dependencies]
embuild = "0.31.3"
